--- a/javaweb/build.gradle
+++ b/javaweb/build.gradle
@@ -2,8 +2,13 @@ group 'com.github.mahui53541.blog'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'war'
+apply plugin: 'org.akhikhl.gretty'
 
 sourceCompatibility = 1.8
+
+//统一编码为utf-8
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
@@ -11,4 +16,54 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile 'org.slf4j:slf4j-api:1.7.21',
+            'org.apache.logging.log4j:log4j-core:2.6.2',
+            'org.apache.logging.log4j:log4j-slf4j-impl:2.6.2',
+            'org.apache.logging.log4j:log4j-api:2.6.2',
+            'org.springframework:spring-context:4.3.5.RELEASE',
+            'org.springframework:spring-context-support:4.3.5.RELEASE',
+            'org.springframework:spring-beans:4.3.5.RELEASE',
+            'org.springframework:spring-expression:4.3.5.RELEASE',
+            'org.springframework:spring-orm:4.3.5.RELEASE',
+            'org.springframework:spring-web:4.3.5.RELEASE',
+            'org.springframework:spring-jdbc:4.3.5.RELEASE',
+            'org.springframework:spring-test:4.3.5.RELEASE',
+            'org.springframework:spring-aop:4.3.5.RELEASE',
+            'org.springframework:spring-webmvc:4.3.5.RELEASE',
+            'org.springframework:spring-tx:4.3.5.RELEASE',
+            'org.mybatis:mybatis:3.4.1',
+            'org.mybatis:mybatis-spring:1.3.1',
+            'mysql:mysql-connector-java:5.1.41',
+            'com.mchange:c3p0:0.9.5.2',
+            'com.mchange:mchange-commons-java:0.2.11',
+            'com.alibaba:fastjson:1.2.31',
+            'commons-io:commons-io:2.5',
+            'commons-codec:commons-codec:1.10',
+            'org.apache.commons:commons-lang3:3.5',
+            'commons-logging:commons-logging:1.2',
+            'commons-fileupload:commons-fileupload:1.3.2'
+
+}
+
+//配置插件仓库
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'org.akhikhl.gretty:gretty:1.2.4'
+    }
+}
+gretty {
+    port = 8090
+    contextPath =""
+    servletContainer = 'tomcat8'
+    debugPort = 5005      // default
+    debugSuspend = true   // default
+    httpsEnabled = true
+    httpsPort = 443
+    httpEnabled = false
 }
