--- a/javaweb/src/main/resources/mysql-db.properties
+++ b/javaweb/src/main/resources/mysql-db.properties
@@ -1,5 +1,5 @@
 dataSource.driverClass=com.mysql.jdbc.Driver
-dataSource.jdbcUrl=jdbc:mysql://localhost/myblog?useSSL\=false&amp;characterEncoding\=utf-8
+dataSource.jdbcUrl=jdbc:mysql://localhost/blog?useSSL\=false&amp;characterEncoding\=utf-8
 dataSource.user=root
 dataSource.password=123456
 dataSource.maxPoolSize=20
