--- a/javaweb/src/main/webapp/WEB-INF/web.xml
+++ b/javaweb/src/main/webapp/WEB-INF/web.xml
@@ -9,12 +9,20 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
+
 	<!-- contextConfigLocation参数用来指定Spring的配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/applicationContext*.xml</param-value>
+		<param-value>classpath:spring-config.xml</param-value>
 	</context-param>
-	
+
+	<!-- 用于切换数据库，sqlite/mysql -->
+	<context-param>
+		<param-name>spring.profiles.active</param-name>
+		<param-value>mysql</param-value>
+	</context-param>
+
 	<!-- 定义Spring MVC的前端控制器 -->
 	<servlet>
 	  <servlet-name>springmvc</servlet-name>
@@ -23,7 +31,7 @@
 	  </servlet-class>
 	  <init-param>
 	    <param-name>contextConfigLocation</param-name>
-	    <param-value>classpath:/springmvc-config.xml</param-value>
+	    <param-value>classpath:spring-mvc-config.xml</param-value>
 	  </init-param>
 	  <load-on-startup>1</load-on-startup>
 	</servlet>
