--- a/angular4/package.json
+++ b/angular4/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/http-loader": "0.0.3",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "tinymce": "4.6.3",
     "jquery-ui-dist": "^1.12.1",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
