--- a/javaweb/build.gradle
+++ b/javaweb/build.gradle
@@ -24,7 +24,7 @@ sourceSets {
 }
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.slf4j:slf4j-log4j12:1.7.25',
             'org.springframework:spring-context:4.3.5.RELEASE',
             'org.springframework:spring-context-support:4.3.5.RELEASE',
@@ -49,7 +49,11 @@ dependencies {
             'org.apache.commons:commons-lang3:3.5',
             'commons-logging:commons-logging:1.2',
             'commons-fileupload:commons-fileupload:1.3.2'
-
+    compile group: 'org.apache.shiro', name: 'shiro-core', version: '1.4.0'
+    compile group: 'org.apache.shiro', name: 'shiro-web', version: '1.4.0'
+    compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.4.0'
+    compile group: 'org.apache.shiro', name: 'shiro-ehcache', version: '1.4.0'
+    compile group: 'org.apache.shiro', name: 'shiro-quartz', version: '1.4.0'
 }
 
 //配置插件仓库
