--- a/javaweb/src/main/webapp/WEB-INF/web.xml
+++ b/javaweb/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,22 @@
 	  <servlet-name>springmvc</servlet-name>
 	  <url-pattern>/</url-pattern>
 	</servlet-mapping>
-  
+
+	<!-- shiro 安全过滤器 -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
   	<!-- 编码过滤器 -->
   	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
