--- a/angular4/package.json
+++ b/angular4/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -27,6 +28,7 @@
     "jquery": "^3.2.1",
     "jquery-ui-dist": "^1.12.1",
     "ngx-bootstrap": "^1.6.6",
+    "ngx-toastr": "^5.2.4",
     "rxjs": "^5.1.0",
     "tinymce": "4.6.3",
     "zone.js": "^0.8.4"
