--- a/javaweb/src/main/webapp/WEB-INF/web.xml
+++ b/javaweb/src/main/webapp/WEB-INF/web.xml
@@ -70,12 +70,19 @@
 		<filter-name>characterEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<error-page>
-	   <error-code>404</error-code>
-	   <location>/</location>
-	</error-page>
+
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.js</url-pattern>
+		<url-pattern>*.css</url-pattern>
+		<url-pattern>*.html</url-pattern>
+		<url-pattern>*.png</url-pattern>
+		<url-pattern>*.gif</url-pattern>
+		<url-pattern>*.jpg</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
-	  <welcome-file>index.jsp</welcome-file>
+	  <welcome-file>index.html</welcome-file>
 	</welcome-file-list>
   
 </web-app>
