--- a/javaweb/build.gradle
+++ b/javaweb/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.4.0'
     compile group: 'org.apache.shiro', name: 'shiro-ehcache', version: '1.4.0'
     compile group: 'org.apache.shiro', name: 'shiro-quartz', version: '1.4.0'
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.10'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'
 }
 
 //配置插件仓库
