--- a/javaweb/src/main/resources/log4j.properties
+++ b/javaweb/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Global logging configuration
 log4j.rootLogger=ERROR, stdout
 # MyBatis logging configuration...
-log4j.logger.com.github.mahui53541.atm.dao=DEBUG
+log4j.logger.com.github.mahui53541.blog.mapper=TRACE
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
