--- a/javaweb/build.gradle
+++ b/javaweb/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile group: 'org.apache.shiro', name: 'shiro-quartz', version: '1.4.0'
     compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.10'
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'
+    compile group: 'com.qiniu', name: 'qiniu-java-sdk', version: '7.2.6'
 }
 
 //配置插件仓库
