--- a/angular4/package.json
+++ b/angular4/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "@swimlane/ngx-datatable": "^9.3.0",
     "core-js": "^2.4.1",
     "editor.md": "^1.5.0",
     "jquery": "^3.2.1",
