--- a/angular4/package.json
+++ b/angular4/package.json
@@ -23,15 +23,15 @@
     "@angular/router": "^4.0.0",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
-    "@swimlane/ngx-datatable": "^9.3.0",
     "core-js": "^2.4.1",
     "editor.md": "^1.5.0",
     "jquery": "^3.2.1",
     "jquery-ui-dist": "^1.12.1",
     "ngx-bootstrap": "^1.6.6",
     "ngx-toastr": "^5.2.4",
+    "primeng": "^4.0.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
-    "tinymce": "4.6.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
